# nearkim-mcp-server

./: .pre-commit-config.yaml  config.yaml.example  package.json  pyproject.toml  pytest.ini  requirements-test.txt  run_tests.sh
docs/: error_handling_example.md
src/: __main__.py  app.py
src/adapters/: memory_cache.py  todoist_simple.py
src/adapters/google/: calendar.py
src/adapters/openai/: adapter.py  dto.py
src/adapters/todoist/: adapter.py  dto.py
src/api/: __init__.py  app.py
src/application/commands/: __init__.py  classification.py
src/application/dto/: webhook.py
src/application/mappers/: todoist_task.py
src/application/middleware/: base.py  classification.py  error_handling.py
src/application/service/: todoist.py  todoist_service.py  webhook.py
src/application/service/todoist/: __init__.py  api.py  cache.py  classification.py  label.py  task.py  task_ignore.py
src/bootstrap/: config.py  container.py
src/bootstrap/settings/: schemas.py  settings.py
src/domain/: entities.py  exceptions.py  models.py  repositories.py  services.py  value_objects.py
src/domain/ports/: __init__.py  cache.py
src/domain/services/: __init__.py  classification.py  task_ignore.py
src/infrastructure/notifications/: email_service.py
src/infrastructure/persistence/: decision_repository.py
src/infrastructure/profile/: repository.py
src/mcp/: server.py
src/ports/: calendar.py  calendar_scheduling.py  llm.py  profile.py  schedule.py  todoist.py
src/tests/unit/: test_todoist_support.py  test_todoist_webhook_service.py
tests/: conftest.py
tests/integration/: test_container.py  test_webhook_flow.py
tests/unit/: test_todoist_service.py
tests/unit/adapters/: test_todoist_port.py
tests/unit/application/: test_mappers.py  test_middleware.py  test_todoist_services.py
tests/unit/domain/: test_models.py  test_services.py  test_value_objects.py
