[project]
name = "nearkim-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "databases>=0.9.0",
    "fastapi>=0.116.1",
    "openai>=1.107.3",
    "todoist-api-python>=3.1.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "pytest>=8.4.2",
]
